# pdm

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
src/: app.rs  bitcoin_config.rs  config.rs  lib.rs  main.rs  p2poolv2_config.rs  settings.rs  ui.rs  utils.rs
src/components/: bitcoin_config_view.rs  bitcoin_status_view.rs  file_explorer.rs  home_view.rs  ln_config_view.rs  ln_status_view.rs  mod.rs  p2pool_config_view.rs  p2pool_status_view.rs  settings_view.rs  shares_market_view.rs  status_bar.rs
src/components/bitcoin_status_view/: chain_info.rs  mod.rs
src/snapshots/: pdm__tests__home_screen.snap  pdm__tests__menu_toggled.snap  pdm__ui__tests__bitcoin_config_screen_render.snap  pdm__ui__tests__bitcoin_screen_render.snap  pdm__ui__tests__bitcoin_status_screen_render.snap  pdm__ui__tests__bitcoin_status_tab_logs_render.snap  pdm__ui__tests__bitcoin_status_tab_peers_render.snap  pdm__ui__tests__bitcoin_status_tab_system_render.snap  pdm__ui__tests__home_screen_render.snap  pdm__ui__tests__ln_config_screen_render.snap  pdm__ui__tests__ln_status_screen_render.snap  pdm__ui__tests__p2pool_config_screen_render.snap  pdm__ui__tests__p2pool_screen_render.snap  pdm__ui__tests__p2pool_status_screen_render.snap  pdm__ui__tests__settings_screen_render.snap  pdm__ui__tests__shares_market_screen_render.snap
tests/snapshots/: ui_snapshots__config_screen_render.snap  ui_snapshots__home_screen_render.snap
