[package]
name = "pdm"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "AGPLv3"

[dependencies]
anyhow = "1.0.100"
config = "0.15.19"
crossterm = "0.29.0"
directories = "6.0.0"
ratatui = "0.30.0"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
p2poolv2_config = { git = "https://github.com/p2poolv2/p2poolv2", package = "p2poolv2_config" }

[dev-dependencies]
insta = "1.44.3"
tempfile = "3"
