[package]
name = "pdm"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "AGPLv3"

[dependencies]
anyhow = "1.0.100"
config = "0.15.19"
crossterm = "0.29.0"
ratatui = "0.29.0"
p2poolv2_config = { git = "https://github.com/p2poolv2/p2poolv2", package = "p2poolv2_config" }
bitcoin = "0.32.5"
toml_edit = "0.22"

[dev-dependencies]
insta = "1.44.3"
tempfile = "3"
